fixed overlapping navbar

--- a/src/app/modules/gb-navbar-module/gb-navbar.component.css
+++ b/src/app/modules/gb-navbar-module/gb-navbar.component.css
@@ -8,7 +8,7 @@
   z-index: 99;
   border-bottom: 3px solid lightgray;
   padding-bottom: 2px;
-  width: 100%;
+  width: 69%;
   font-weight: bold;
 }
 
